--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,58 @@
-body{
-    width: 100%;
-    padding: 10px;
-    font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
 
+.chat-window {
+  display: none;
+  width: 400px;
+  height: 400px;
+  border: 1px solid #ccc;
+  overflow: auto;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.messages {
+  margin-bottom: 10px;
+}
+
+.input-box {
+  display: flex;
+  margin-top: 10px;
+}
+
+.input-box input {
+  flex-grow: 1;
+  border: none;
+  padding: 5px;
+  font-size: 16px;
+}
+
+.input-box button {
+  border: none;
+  background-color: #008CBA;
+  color: #fff;
+  padding: 5px 10px;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.start-chat-btn {
+  border: none;
+  background-color: #008CBA;
+  color: #fff;
+  padding: 10px 20px;
+  cursor: pointer;
+}
 
