--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,15 +5,60 @@ body {
   font-size: 16px;
 }
 
-.wrapper {
+.headers{
+  background:white;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
+  font-size: 14px;
+  padding:3px;
+  width:100%;
+  color: black;
+
+}
+.heading{
+  font-size: 30px;
+  margin:10px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.chat-window {
+
+
+.wrapper {
+  margin: 10px;
+  display: grid;
+  background: whitesmoke;
+  grid-gap: 0.5em;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: minmax(150px,inherit);
+
+}
+
+.vid-div1{
+  background: #ddd;
+  grid-column: 1/2;
+  grid-row: 1;
+  height: 300px;
+}
+.vid-div2{
+  background: #ddd;
+  grid-row: 2;
+  grid-column: 1/2;
+  height: 300px;
+}
+.chatbox{
+  grid-column:2/4;
+  background: white;
+  grid-row: 1/4;
+  height: 620px;
+  padding:7px
+
+}
+.chats{
+  margin-top:1px;
+  
+}
+/* .inputbox{} */
+
+/* .chat-window {
   display: none;
   width: 400px;
   height: 400px;
@@ -54,5 +99,5 @@ body {
   color: #fff;
   padding: 10px 20px;
   cursor: pointer;
-}
+} */
 
