--- a/templates/index.html
+++ b/templates/index.html
@@ -1,48 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P2P Omegle</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+{% extends 'wrapper.html' %}
 
-</head>
-<body style="background: whitesmoke;">
- <nav class="headers">
-    <div class="heading">P2P Omegle</div>
- </nav>
-  <div class="wrapper">
+{% block content %}
+
+
+<div class="start">
+
+  <p class="heading">Domegle</p>
+
+  <span class="descrip">
+    Peer-to-Peer decentralized Omegle 
+  </span>
+</div>
+<div class="main-buttons">
+  <a href="/chat" class="start-chat-button" type="button">
+    <i class="fas fa-comments"></i>
+    <span class="button-text">Start Chat</span>
+  </a>
+
+
+  <a href="/settings" class="settings-button" type="button">
+    <i class="fa fa-gear"></i>
+    <span class="button-text">Settings</span>
+  </a>
   
-    <div class="vid-div1">
-    vid1**
-  </div>
-  
-  <div class="vid-div2">
-    vid2**
-  </div>
+</div>
 
-  <div class="chatbox">
 
-    <div class="chats">
-      Stranger: Hi
-      <br>
-      You: Hi
-    </div>
-   
-    <div style="width:100%;display:block;display:flex;flex-direction:row;margin-top:550px;">
-      <button type="submit" onclick="sendMessage()" id="msg-btn" style="padding:5px;width:10%;background: dodgerblue; color: white;border:none;">
-        New
-      </button>
-
-      <input type="text" id="msg" name="message" style="background:whitesmoke;width:80%;padding:10px;border:none">
-      <button type="submit" onclick="sendMessage()" id="msg-btn" style="padding:5px;width:10%;background: dodgerblue; color: white;border:none;">send</button>
-      <!-- <input type="hidden" value="<?php echo $_REQUEST['oid'];  ?>" id="other_id"> -->
-    </div>
-  </div>
-  
-
- </div>
-
-</body>
-</html>
+  {% endblock %}
